# draco

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  CMakeLists.txt  CPP_INTEGRATION.md  Cargo.toml  PLAN.yaml  PLAN_DESCRIPTION.md  README.md  REFACTORING_NOTES.md  implementation_state.yaml
.github/: copilot-instructions.md
cmake/: FindDracoRust.cmake  draco_build_definitions.cmake  draco_dependencies.cmake  draco_options.cmake  draco_rust_config.h.in
crates/: Cargo.toml  torus.drc.ply
crates/draco-attributes/: Cargo.toml
crates/draco-compression/: Cargo.toml
crates/draco-core/: API.md  Cargo.toml  README.md  build.rs  cbindgen.toml  rust_encoded.drc.ply
crates/draco-core/src/: ans.rs  attribute_octahedron_transform.rs  attribute_quantization_transform.rs  attribute_transform.rs  attribute_transform_data.rs  bit_utils.rs  buffer.rs  c_api.rs  corner_table.rs  data_buffer.rs  data_types.rs  decoder_buffer.rs  direct_bit_decoder.rs  direct_bit_encoder.rs  draco_types.rs  dynamic_integer_points_kd_tree.rs  encoder_buffer.rs  encoder_options.rs  error.rs  folded_bit32_coder.rs  geometry_attribute.rs  geometry_indices.rs  kd_tree_attributes_decoder.rs  kd_tree_attributes_encoder.rs  lib.rs  math_utils.rs  mesh.rs  mesh_decoder.rs  mesh_edgebreaker_decoder.rs  mesh_edgebreaker_decoder_new.rs  mesh_edgebreaker_decoder_old.rs  mesh_edgebreaker_encoder.rs  mesh_edgebreaker_shared.rs  mesh_encoder.rs  mesh_prediction_scheme_data.rs  normal_compression_utils.rs  point_cloud.rs  point_cloud_decoder.rs  point_cloud_encoder.rs  prediction_scheme.rs  (+29 more)
crates/draco-core/tests/: attribute_id_test.rs  attribute_integration_test.rs  binary_compatibility_test.rs  corner_table_test.rs  cpp_interop_roundtrip_test.rs  debug_comparison.rs  drc_edge_cases_test.rs  drc_existing_files_test.rs  edgebreaker_minimal_repro.rs  encode_decode_test.rs  geometric_normal_roundtrip_test.rs  gltf_draco_interop_test.rs  gltf_style_roundtrip_test.rs  kd_tree_test.rs  mesh_constrained_multi_parallelogram_test.rs  mesh_edgebreaker_boundary_test.rs  mesh_edgebreaker_multi_component_roundtrip.rs  mesh_edgebreaker_roundtrip.rs  mesh_edgebreaker_test.rs  mesh_edgebreaker_tetrahedron_test.rs  mesh_edgebreaker_torus_test.rs  mesh_edgebreaker_two_tetrahedra_test.rs  mesh_encode_decode_test.rs  mesh_encoder_test.rs  mesh_parallelogram_test.rs  mesh_position_roundtrip_test.rs  mesh_quantization_test.rs  mesh_triangle_comparison_test.rs  normal_encoding_test.rs  normal_roundtrip_test.rs  quantization_test.rs  rust_vs_cpp_decode_test.rs  symbol_roundtrip_test.rs  test_annulus_edgebreaker.rs  test_normal_transform.rs  test_octahedral_detailed.rs  test_rans.rs  test_rust_encoder_normals.rs  tex_coords_portable_roundtrip_test.rs  version_roundtrip_test.rs
crates/draco-io/: API.md  Cargo.toml  README.md  UNIFIED_API.md  debug_log.txt
crates/draco-io/examples/: fbx_demo.rs  fbx_inspect.rs  gltf_demo.rs  polymorphic.rs  unified_api.rs  unified_readers.rs
crates/draco-io/input/: blender_report.json  scene.fbx  scene.glb  scene.ply  scene_gltf.json
crates/draco-io/output/: scene_roundtrip.fbx  scene_roundtrip.glb  scene_roundtrip.ply  scene_roundtrip.report.json
crates/draco-io/src/: fbx_reader.rs  fbx_writer.rs  gltf_reader.rs  gltf_writer.rs  lib.rs  obj_reader.rs  obj_writer.rs  ply_reader.rs  ply_writer.rs  traits.rs
crates/draco-io/tests/: debug_ngon12.rs  glb_roundtrip_test.rs  roundtrip.rs
crates/draco-mesh/: Cargo.toml
crates/draco-point-cloud/: Cargo.toml
crates/draco-tools/: Cargo.toml
draco_core/: CMakeLists.txt
draco_core/examples/: basic_test.cpp  comprehensive_test.cpp  modern_api_example.cpp
draco_core/include/draco/: modern_api.h
draco_core/include/draco/compression/: draco_compression_options.h
draco_core/include/draco/compression/mesh/: mesh_edgebreaker_traversal_encoder.h
draco_core/include/draco/compression/mesh/traverser/: mesh_traversal_sequencer.h
draco_core/include/draco/core/: draco_test_utils.h  path_utils.h
draco_core/include/draco/mesh/: mesh.h  mesh_features.h  mesh_stripifier.h  triangle_soup_mesh_builder.h
draco_core/include/draco/point_cloud/: point_cloud.h  point_cloud_builder.h
draco_core/include/draco/texture/: image_compression_options.h  texture.h  texture_utils.h
draco_core/src/: attributes_encoder.cc  mesh.cc  mesh_cleanup.cc  mesh_edgebreaker_decoder_impl.cc  mesh_edgebreaker_encoder_impl.cc  mesh_misc_functions.cc  mesh_sequential_encoder.cc  path_utils.cc  point_cloud.cc  texture_utils.cc  triangle_soup_mesh_builder.cc
draco_io/: CMakeLists.txt
draco_io/examples/: debug_test.cpp  enhanced_io_test.cpp  io_test.cpp  modern_io_example.cpp  real_io_test.cpp  separation_test.cpp  simple_debug.cpp  simple_test.cpp  test_gltf_minimal.cpp
draco_io/include/draco/io/: file_utils.h  gltf_decoder.h  mesh_transcoder.h
draco_io/include/draco/scene/: scene.h
draco_io/src/: file_utils.cc  gltf_encoder.cc  mesh_are_equivalent.cc  mesh_transcoder.cc  obj_encoder.cc  point_cloud_builder.cc  scene_utils.cc  stl_encoder.cc
src/draco/compression/entropy/: shannon_entropy_test.cc
src/draco/core/: bit_utils.h  buffer_bit_coding_test.cc  decoder_buffer.cc  decoder_buffer.h  encoder_buffer.cc  encoder_buffer.h  math_utils.h
tests/: blender_draco_test.py  blender_mesh_validator.py
web/: Cargo.toml  build.ps1
web/fbx-reader-wasm/: Cargo.toml
web/fbx-reader-wasm/src/: lib.rs
web/fbx-writer-wasm/: Cargo.toml
web/fbx-writer-wasm/src/: lib.rs
web/gltf-reader-wasm/: Cargo.toml
web/gltf-reader-wasm/src/: lib.rs
web/gltf-writer-wasm/: Cargo.toml
web/gltf-writer-wasm/src/: lib.rs
web/obj-reader-wasm/: Cargo.toml
web/obj-reader-wasm/src/: lib.rs
web/obj-writer-wasm/: Cargo.toml
web/obj-writer-wasm/src/: lib.rs
web/ply-reader-wasm/: Cargo.toml
web/ply-reader-wasm/src/: lib.rs
web/ply-writer-wasm/: Cargo.toml
web/ply-writer-wasm/src/: lib.rs
web/www/: app.js  index.html  style.css
