[workspace]
resolver = "2"
members = [
    "obj-reader-wasm",
    "obj-writer-wasm",
    "ply-reader-wasm",
    "ply-writer-wasm",
    "gltf-reader-wasm",
    "gltf-writer-wasm",
    "fbx-reader-wasm",
    "fbx-writer-wasm",
]

[workspace.dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console", "Blob", "Url", "Document", "Window", "Element", "HtmlElement", "HtmlAnchorElement", "HtmlInputElement", "FileReader", "File", "FileList"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.6"
draco-core = { path = "../crates/draco-core" }
draco-io = { path = "../crates/draco-io" }
