[package]
name = "draco-io"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "I/O and format handling for Draco 3D compression library"

[dependencies]
draco-core = { workspace = true }
draco-attributes = { path = "../draco-attributes" }
draco-compression = { path = "../draco-compression" }
thiserror = { workspace = true }
byteorder = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
proptest = { workspace = true }