[package]
name = "draco-io"
version = "0.1.0"
edition = "2021"

[dependencies]
draco-core = { path = "../draco-core", default-features = false }
thiserror = "2.0.17"
byteorder = "1.5.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
miniz_oxide = { version = "0.6", optional = true }

[features]
default = ["encoder", "decoder"]
encoder = ["draco-core/encoder"]
decoder = ["draco-core/decoder"]
compression = ["miniz_oxide"]

[dev-dependencies]
tempfile = "3.24.0"
