[package]
name = "gltf-reader-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = { workspace = true }
js-sys = { workspace = true }
# Use nanoserde for JSON parsing - much smaller binary size than serde_json
nanoserde = { version = "0.2", default-features = false, features = ["std", "json"] }
draco-core = { path = "../../crates/draco-core", default-features = false, features = ["decoder"] }
draco-io = { path = "../../crates/draco-io", default-features = false, features = ["decoder"] }
