[package]
name = "ply-reader-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = { workspace = true }
js-sys = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde-wasm-bindgen = { workspace = true }
draco-core = { path = "../../crates/draco-core", default-features = false, features = ["decoder"] }
draco-io = { path = "../../crates/draco-io", default-features = false, features = ["decoder"] }
